Hecha la funcionalidad de reprogramar citas desde cliente